--- a/_posts/2021-03-07-sThD.md
+++ b/_posts/2021-03-07-sThD.md
@@ -1,180 +1,4 @@
 --- 
-title: "معرفی کتاب «جهات کعبه»" 
-authors: koushei 
-types: blog 
-slug: sThD 
+published: false 
 --- 
-O’Meara, Simon. 2020. The Kaʿba Orientations: readings in Islam’s ancient house. Edinburgh: Edinburgh university press, 264 pages.
-
-کتاب جهات کعبه نوشته سایمون اُمیرا، نخستین تک‌نگاریِ مستقلی است که درباره کعبه در یکی از زبان‌های اروپایی نوشته می‌شود.[۱] اُمیرا استاد تاریخ معماری و باستان‌شناسی خاورمیانه اسلامی در مدرسه شرق‌شناسی لندن است. او در این کتاب می‌کوشد به کعبه از منظر مسلمانان و سنت اسلامی نزدیک شود و در پیِ پاسخ به پرسش‌هایی مانند این است که کعبه چیست و چرا چنین جایگاه محوری‌ای در میان مسلمانان دارد؟ چرا حاجیان به جای ورود به داخلِ آن، گردِ آن می‌گردند؟ آیا کعبه فضایی خالی است؟ چرا بنایی مُجوّف با پارچه‌ای سیاه پوشانده شده؟
-
-در این کتاب چیستی و چگونگی عملِ کعبه در تمدن اسلامی از آغازگاه‌های آن تا اوایل دوره مدرن بررسی می‌شود. نویسنده برای هر جنبه از این عمل فصلی اختصاص داده و آنها را با نظر به دوری و نزدیکیِ این عمل نسبت به کعبه مرتب ساخته است، از قبله بودنِ کعبه تا داخل و پوشش خانه کعبه. کتاب علاوه بر مقدمه و نتیجه‌گیری پایانی، شش فصل دارد. عناوین فصل‌ها از این قرار است: کعبه به مثابه قبله؛ کعبه به مثابه مرکز؛ کعبه به مثابه پِی؛ کعبه به مثابه معشوق؛ خانه به مثابه نگهدارنده؛ خانه به مثابه  مَسْکن. در ادامه، گزارشی از محتوای این فصل‌ها ارائه می‌کنیم.
-
-فصل نخست به فراگیرترین عمل کعبه یعنی قبله می‌پردازد. علاوه بر نمازهای روزانه که در آن رو به سوی قبله می‌آوریم، در انجام برخی آئین‌های حج نیز توجه به قبله واجب است. مردگان را در قبر به گونه‌ای جای می‌دهیم که رو به سوی قبله داشته باشند. در هنگام وضو ساختن و دعا نیز مستحب است که رو به سوی قبله داشته باشیم. در برخی مذاهب اسلامی از جمله شروط شرعی بودن ذبح، رو به جانب قبله داشتنِ حیوان است. از سوی دیگر، قضای حاجت رو به قبله حرام است. به ملاحظه همین حضور گسترده قبله در زندگی مسلمانان است که آنها را «اهل القبله» می‌خوانند. در طول تاریخ اسلام نه تنها مساجد در راستای قبله ساخته شده‌اند، بلکه گاه حتی منازل مسکونی نیز رو به سوی قبله داشته‌اند. آیا چنین کار پُر زحمتی آنگونه که کرسول می‌گوید تحت تأثیر واقعیاتی کم اهمیت بوده است (Creswell, 1979: 26)؟ از جمله اهداف این فصل پرداختن به چنین پرسشی است، و نظر به هزینه‌ای دارد که حاکمان مسلمان برای دستیابی به این هم ترازی در ساخت شهرها صرف می‌کرده‌اند.
-
-از آنجا که در طول تاریخ اسلام «قبله» تنها به معنای جهت کعبه به کار نرفته است، در فصل نخست همچنین تاریخ و معانی واژه قبله و کاربردهای آن بررسی می‌شود. نویسنده بر آن است که شواهد کافی در اختیار داریم که به خلاف ادعاهای تجدیدنظرطلبانه بپذیریم کعبه از همان اوایل شکل‌گیریِ اسلام، برای جامعه مسلمانان نقشی آیینی داشته است. او همچنین به ساخت شهرها و یا دستکم هسته مرکزی آنها در جهت قبله توجه می‌کند و شواهدی برای وجود چنین سنتی در میان مسلمانان به دست می‌دهد. چنین سنتی البته بی‌سابقه نیست، و در فرهنگ‌های دیگر نیز جهت‌گیری شهرها به سوی جهات مبارک، نمادین و یا مقدس امری شناخته شده است.
-
-فصل دوم، عمل کعبه به مثابه مرکز جهان را بررسی می‌کند. هدف این است که بفهمیم چگونه بنابر نقل مسلمانان کعبه به جهان جهت داده است. نویسنده همچنین می‌کوشد توضیح دهد که چه ویژگی‌ای در کعبه این جهت‌دهی را تصورپذیر می‌کند. بخش نخست این فصل که به نوعی امتداد فصل پیشین است، جهت‌گیریِ  جهان به سوی کعبه را تبیین می‌کند. در این بخش همچنین امتیاز کعبه نسبت به دیگر مرکز‌هایی که مسلمانان برای جهان برشمرده‌اند بیان می‌شود. بنابر منابع اولیه اسلامی، جهتِ جهان از آن رو به سمت کعبه است که نقطه پیدایش و گسترش آن بوده. به عبارت دیگر، جهت‌گیری به سوی کعبه جهت‌گیری به سمت مبدأ پیدایش است. در بخش دوم از این فصل نویسنده برای این که نشان دهد چه ویژگی‌ای در خود کعبه این جهت‌دهی را معقول می‌کند به تبیین کانت از خاستگاه مفهوم جهت در ذهن ما اشاره می‌کند. کانت توضیح می‌دهد که درکِ ما از مفهوم جهت در مکان، برخاسته از واقعیتِ بدنِ ما و دو سویه بودنِ آن است. نویسنده می‌کوشد با تکیه بر شماری از استعاره‌هایی که درباره جهت‌داری کعبه در منابع اسلامی آمده است مشابهت کعبه با بدن انسانی را نشان دهد و ویژگیِ جهت‌دهنده بودن کعبه را در واقعیت جسمانیِ آن بجوید.
-
-فصل سوم، کعبه را در صورتِ ویران‌شده آن دنبال می‌کند، هنگامی که سازه بیرونیِ کعبه تخریب شده و تنها پی و بنیانِ آن برجاست. از آنجا که کعبه جایگاهی محوری در کیهان‌شناسیِ اسلامی دارد، توقع آن است که تخریب این بنا، اضطرابی آخرالزمانی را از نابودیِ محور و مرکز جهان در میان مسلمانان برانگیزد، چیزی مشابه آنچه در پیِ ویرانی هیکل در میان یهود شاهد هستیم. نه تنها ماجرای ویرانی هیکل به کتاب مقدس راه یافته است (کتاب مراثیِ ارمیاء نبی)، بلکه یهودیان تا روزگار حاضر خاطره آن واقعه را در روز نهم آو زنده نگاه می‌دارند. واکنش مسلمانان در پیِ تخریب چند باره کعبه اما چنین نیست. نویسنده پس از ارائه گزارشی از ویرانی‌های کعبه در طول تاریخ، به چرایی واکنش متفاوت مسلمانان می‌پردازد و چهار دلیل برای آن برمی‌شمارد. یک دلیل را این می‌داند که آنچه درباره نقش کعبه در آخرالزمان در احادیث نبوی آمده است با آنچه در ماجرای تخریب‌های چند باره کعبه رخ داده یکی نیست. با اینکه به نظر می‌رسد شماری از کسانی که به تخریب کعبه همت گمارده‌اند به ابعاد آخرالزمانیِ آن نیز نظر داشته‌اند، ولی این تخریب‌ها در میان مسلمانان آن اضطراب آخرالزمانی را برنینگیخته است. دلیل دوم را در این واقعیت می‌جوید که آنچه درباره کعبه نهایتا مهم است بنیانِ آسمانیِ آن است. این پایه‌های آسمانی و غیر زمینیِ کعبه است که محور جهان است، نه آنچه بر روی آن بنا شده. دلیل سوم را با توجه به نظر صوفیان درباره کعبه توضیح می‌دهد. آنها برای کعبه دو صورت جسمانی قایل‌اند: یکی کعبه سنگی که از خاک و گِل است و دیگری کعبه دل. بنابر چنین دیدگاهی قاعدتا تا هنگامی که دومی به سلامت باشد، آنچه بر سر دیگری بیاید چندان مایه نگرانی نخواهد بود. دلیل چهارم ناظر به این امر است که کعبه همان اندازه که واقعیتی مادی و جسمانی است حقیقتی عقلی نیز هست، و تخریب اولی در دومی اثری نخواهد داشت.
-
-با اینکه ورود به داخل خانه کعبه مجاز است (هرچند به صورت محدود)، اما محل برگزاری آیین‌ها فضای بیرونیِ کعبه است. فصل چهارم به آئین اصلی کعبه، یعنی طواف اختصاص دارد. این فصل در سه بخش موضوع را پی می‌گیرد. بخش نخست به توصیف طواف و معناهایی که برای آن برشمرده‌اند می‌پردازد. بخش دوم به گزارش تجربه‌های حاجیان در سده‌های گذشته اختصاص دارد. در این بخش مخصوصا با تمرکز بر تجربه ابن عربی، تجربه آیینی-معمارانه از این بنا بررسی می‌شود. تجربه‌ای که در آن حاجی به مثابه عاشق با معشوق خود به وحدت می‌رسد. بخش سوم این فصل نیز ناظر به آن دسته از پژوهش‌های دانشگاهی است که کعبه را به مثابه نوعروسی تحلیل می‌کنند.
-
-فصل پنجم و ششم به کعبه به مثابه خانه و مسکن می‌پردازد و عمل خانه بودن (housing) آن را توضیح می‌دهد. نویسنده در فصل پنجم در پی آن است که نشان دهد چگونه تهی بودنِ داخل خانه کعبه در خدمت کارکرد کعبه به مثابه نگهدارنده نظم نمادین اسلام عمل می‌کند. در آغاز این فصل گزارشی ارائه می‌شود از آنچه طبق منابع اسلامی پیش از ظهور اسلام در خانه کعبه نگهداری می‌شده است. اینکه کارکرد آنها چه بوده، و پیامبر در پیِ فتح مکه چه نوع مواجهه‌ای با آنها داشته است. در ادامه این فصل، گزارش منابع کهن درباره خارج کردنِ عمده اشیاء داخل خانه به دستور پیامبر بررسی می‌شود، و نگاره‌هایی از کعبه که این ادعا را تجسم می‌بخشند تحلیل می‌شود. در بخش پایانی فصل نیز نویسنده استدلال می‌کند که کعبه برای اسلام کارکردی مشابه نقطه گریزِ پرسپکتیو خطی برای مدرنیته را دارد: نگهدارنده نظم نمادین اسلام و شکل‌دهنده رمز و راز خانه.
-
-فصل ششم به پوشش کعبه، کسوه، اختصاص دارد. نخست تاریخچه و وصف کسوه و نسبت آن با کعبه بیان  می‌شود. این پرسش مطرح می‌شود که آیا کسوه جزء اصلی، لازم و جدایی‌ناپذیر کعبه بوده و یا در نتیجه تأملات بعدی به آن افزوده شده است؟ آیا کعبه را پنهان می‌کند و یا آن را ظاهر می‌سازد؟ نویسنده سپس با تکیه بر توصیف و تصویرگری کعبه توسط مسافران، حاجیان و نقاشان استدلال می کند که نحوه خاصی از آویختن کسوه، به زمان مشخصی در سال اشاره دارد که تصور می‌شود حضوری الهی در آن مسکن گزیده است.
-
-کتاب دارای ۵۸ تصویر است، از نقاشی‌های ایرانی در نسخه‌های کهن تا عکس‌ها و نقشه‌ها. از نظر غنای تصویری و کیفیت تصاویر می‌توان آن را با دو کتاب ذیل مقایسه کرد:
-
-Tütüncü, Mehmet, and Atef Alshehri. 2020. Mekka and Medina maps and illustrations from 15th to 20th century. Heemstede: SOTA.
-
-Porter, Venetia, and M. A. Abdel Haleem. 2012. Hajj: journey to the heart of Islam. Cambridge, Mass.: Harvard University Press.
-
-فارغ از اینکه برخی استدلال‌های کتاب چه میزان قانع‌کننده باشد، تلاش نویسنده برای نزدیک شدن به یکی از مهم‌ترین بناهای اسلامی و بلکه مهم‌ترینِ آنها، از منظرهای مختلف و با تکیه بر آخرین یافته‌ها ستودنی است. با اینکه کتاب ادعا ندارد آخرین حرف را در زمینه کعبه می‌زند، اما می‌تواند نقطه شروع بسیار خوبی برای پژوهش‌های بعدی درباره این بنا باشد. پژوهش‌هایی که ابعاد الهیاتی، زیباشناسانه، معمارانه، عرفی، سیاسی و تاریخیِ آن را در کنار هم ببینند و دنبال کنند.
-
-برای مشاهده نظرات پژوهشگرانی مانند کریستین لانگ، وندی شاو، و جاناتان بلوم درباره این کتاب بنگرید به [صفحه معرفی](https://edinburghuniversitypress.com/book-the-ka-ba-orientations.html) آن در تارنمای انتشارات دانشگاه ادینبورو. انجمن سلطنتی مطالعات آسیایی نیز جلسه‌ای مجازی برای معرفیِ کتاب با حضور بلوم برگزار کرده است. نویسنده در این جلسه به ویژه با تمرکز بر فصل سوم کتاب به گزارش یافته‌های خود می‌پردازد (این جلسه در [اینجا](https://www.youtube.com/watch?v=eKQz7cF2os0) در دسترس است).
-
-منابع
-
-Creswell, K.A.C. 1979. Early Muslim Architecture Umayyads A.D. 622-750, Hacker art books.
-
-Meri, Yousef. 2011. Kaʻaba. Oxford University Press.
-
-O’Meara, Simon. 2020. The Kaʿba Orientations: readings in Islam’s ancient house. Edinburgh: Edinburgh university press.
-
-Sinclair, Susan (ed.). 2012. Bibliography of Art and Architecture in the Islamic World, Brill.
-
-Tagliacozzo, Eric, and Shawkat M. Toorawa. 2016. The Hajj pilgrimage in Islam. New York, NY: Cambridge University Press.
-
-پی‌نوشت:
-۱. با اینکه پژوهش‌هایی که در زبان‌های اروپایی درباره کعبه انجام گرفته است، از نظر شمار و تنوع به اندازه کارهای موجود درباره قبة‌الصخره نیست، اما اینجا و آنجا مقالات یا فصولی از کتاب‌ها را سراغ داریم که به این موضوع از زوایای مختلف پرداخته‌اند. درباره کعبه و حج مستندهای زیادی نیز ساخته شده است (برای فهرستی از 27 اثری که در سه دهه اخیر ساخته شده‌اند بنگرید به: Tagliacozzo, Toorawa, 2016: 331-332). شماری از پژوهش‌هایی که پیشتر چاپ شده‌اند از این قرار است[۲] (برای فهرست مفصل‌ترِ این آثار بنگرید به کتاب‌نامه پایانیِ اُمیرا):
-
-Akkach, Samer. 2005. Cosmology and Architecture in Premodern Islam: An Architectural Reading of Mystical Ideas. Albany: SUNY Press, 179–93.
-
-Creswell, K.A.C. 1951. The Ka‘ba in A.D. 608. Archaeologia, 94: 97-102.
-
-Creswell, K.A.C. 1979. Early Muslim Architecture Umayyads A.D. 622-750,  Hacker art books, vol 1, 1-5.
-
-Finster, Barbara. 1991. ‘Cubical Yemeni Mosques.’, Proceedings of the Seminar for Arabian Studies, 21: 49–68.
-
-Firestone, Reuven. 1990. Journeys in holy lands: the evolution of the Abraham-Ishmael legends in Islamic exegesis. Albany, N.Y.: State University of New York Press, 80-93.
-
-Hawting, G. R. 1984. "’We Were Not Ordered with Entering It but Only with Circumambulating It.’ "Ḥadīth" and "fiqh" on Entering the Ka’ba." Bulletin of the School of Oriental and African Studies, University of London, 47, no. 2: 228-42.
-
-Hawting, Gerald R. 1982. “The Origins of the Muslim Sanctuary in Mecca.” In Studies on the First Century of Islamic Society. Edited by G. H. A. Juynboll. Carbondale: Southern Illinois University Press, 23–47.
-
-Hawting, Gerald R. 2003. “Kaʿba,” In Encyclopaedia of the Qur’ān, Jane Dammen McAuliffe (ed.), Leiden, the Netherlands: Brill, vol. III, 75–80.
-
-Jairazbhoy, Rafique Ali. 1962. ‘The History of the Shrines at Mecca and Medina’, The Islamic Review, 50 (1–2): 19–34.
-
-Jairazbhoy, Rafique Ali. 1986. ‘The Architecture of the Holy Shrine in Makkah’, in Hajj in Focus, edited by Zafarul-Islam Khan and Yaqub Zaki. London: The Open Press, 151–69.
-
-Khoury, Nuha. 1993. The Dome of the Rock, the Ka‘ba, and Ghumdan: Arab myths and Umayyad monuments. Muqarnas, 10: 57-65.
-
-King, Geoffrey. 2002. ‘The Prophet Muḥammad and the Breaking of the Jāhiliyyah Idols’, in Studies on Arabia in Honour of G. Rex Smith, edited by John Healey and Venetia Porter. Oxford: Oxford University Press, 91–122.
-
-King, Geoffrey. 2002. ‘The Sculptures of the Pre-Islamic Haram at Makka’, in Cairo to Kabul: Afghan Studies Presented to Ralph Pinder-Wilson, edited by Warwick Ball and Leonard Harrow. London: Milisende, 144–50.
-
-King, Geoffrey. 2004. ‘The Paintings of the Pre-Islamic Kaʿba’, Muqarnas, 21: 219–29.
-
-Al Mojan, Muḥammad b. Ḥusayn. 2010. The Honorable Kabah: Architecture and Kiswah, translated by Ghassan Rimlawi. Mecca: Al-Kawn Center.
-
-Moreen, Vera B. 2000. “Is[h]ma ’iliyat: A Judeo-Persian Account of the Building of the Ka’ba.” In Judaism and Islam: Boundaries, Communications, and Interaction: Essays in Honor of William M. Brinner. Edited by Benjamin H. Hary, John L. Hayes, and Fred Astren. Leiden, the Netherlands, and Boston: Brill, 185–199.
-
-Munt, Harry. 2019. ’Kaʿba’, In El3, vol. VI.
-
-Nevo, Yehuda D., and Judith Koren. 1990. “The Origins of the Muslim Descriptions of the Jahili Meccan Sanctuary.” Journal of Near Eastern Studies, 49: 23–44.
-
-Rubin, Uri. 1986. “The Ka’ba: Aspects of Its Ritual Functions and Position in Pre-Islamic and Early Islamic Times.” Jerusalem Studies in Arabic and Islam, 8: 97–131.
-
-Rubin, Uri. 1990. “Hanifiyya and Ka`ba: An Inquiry into the Arabian Pre-Islamic Background of Din Ibrahim.” Jerusalem Studies in Arabic and Islam, 13: 85–112.
-
-Shalem, Avinoam. 2005. ‘Made for the Show: The Medieval Treasury of the Kaʿba in Mecca’, in The Iconography of Islamic Art: Studies in Honour of Robert Hillenbrand, edited by Bernard O’Kane. Edinburgh: Edinburgh University Press, 269–83.
-
-Shalem, Avinoam. 2013. ‘The Four Faces of the Kaʿba in Mecca’, in Architecture and Pilgrim-age, 1000–1500: Southern Europe and Beyond, edited by Paul Davies, Deborah Howard and Wendy Pullan. Farnham: Ashgate, 39–58.
-
-Wensinck, Arent Jan. 1927. ’Kaʿba’, In El1, vol. II, 584-592.
-
-Wensinck, Arent Jan, and Jacques Jomier. 1997. ’Kaʿba’, In El2, vol. IV, 317-322.
-
-Wolfe, Michael (ed.). 1999. One Thousand Roads to Mecca: Ten Centuries of Travelers Writing about the Muslim Pilgrimage. New York: Grove.
-
-از جمله ابعاد مهم در پژوهش درباره کعبه توجه به تفسیرهای عرفانی از آن است. پژوهش‌های ذیل نمونه‌ای از آثار در این زمینه است.
-
-Corbin, Henri. 1986. Temple and Contemplation. Translated by Philip Sherrard and Liadain Sherrard. London: Kegan Paul International, in association with Islamic Publications.
-
-Gril, Denis. 1995. “Love Letters to the Ka’ba: A Presentation of Ibn ’Arabi’s Tâj al-Rasâ’il.” Journal of the Muhyiddin Ibn ’Arabi Society, 17: 40–54.
-
-Lings, Martin. 2004. Mecca: From before Genesis until Now. Cambridge, UK: Archetype.
-
-مقالات ذیل نیز به انعکاس تصویر کعبه در هنر دوره اسلامی می‌پردازند:
-
-Blochet, Edgar. 1923. Note sur une tapisserie arabe du VIIIe siècle. Journal of the Royal Asiatic Society, 613-617.
-
-Erdmann, Kurt. 1959. Ka’bah-Fliesen. Ars Orientalis, 3: 192-197.
-
-Esin, Emel. 1983. Un anuscript illustré représentante les sanctuaires de la Mecque et Médine et le Dome du Mi-radj, à l’époque des Sultans turcs Selîm et Suleyman 1er (H.982-74/1516-66). Revue d’Histoire Maghrébine / Al-Majalla al-Tārīkhīya al-Maghāribīya, 10 / 31-32: 175-190.
-
-Ettinghausen, Richard. 1934. "Die Bildliche Darstellung Der Ka’ba Im Islamischen Kulturkreis." Zeitschrift Der Deutschen Morgenländischen Gesellschaft, 87 (n.F. 12), no. 3/4: 111-37.
-
-Schweizer, Anton, and Avinoam Shalem. 2010. Translating visions: a Japanese lacquer plaque of the Haram of Mecca in the L.A.Mayer Memorial Museum, Jerusalem. Ars Orientalis, 39: 148-173.
-
-Simpson, Marianna Shreve. 2010. "From Tourist to Pilgrim: Iskandar at the Ka’ba in Illustrated Shahnama Manuscripts." Iranian Studies, 43, no. 1: 127-46.
-
-Strika, Vincenzo. 1976. A Ka‘bah picture in the Iraq Museum. Sumer, 32: 195-201.
-
-Strika, Vincenzo. 1979. A Ka‘ba picture from Mosul. Studies in the history of Arabia: Proceedings of the First International Symposium, Riyadh 1977, Volume I: (Sources for the history of Arabia), Part 1. Riyadh: University of Riyadh Press, 145-148.
-
-Witkam, Jan Just. 1979. Enkele miniaturen van Mekka en Medina uit een viertal 19de - eeuwse Islamitische gebedenboeken. Antiek: Tijdschrift voor Liefhebbers en Kenners van Oude Kunst en Kunstnijverheid, 14 iv: 275-280.
-
-این مقاله به برخی از نگاره‌های مکه و مدینه در چهار کتاب دعای اسلامی در قرن نوزدهم می‌پردازد.
-
-Witkam, Jan Just. 2007. The battle of the images. Mecca vs. Medina in the iconography of the manuscripts of al-Jazūlī’s Dalā’il al-khayrātm. Theoretical approaches to the transmission and edition of Oriental manuscripts. Proceedings of a symposium held in Istanbul, March 28-30, 2001. Ed. Judith Peiffer, Manfred Kropp. Beirut: Ergon verlag Würzburg in Kommission, (Beiruter Texte und Studien, 111), 67-82. + plates on 295-300.
-
-Witkam, Jan Just. 2009. Images of Makkah and Medina in an Islamic prayer book. Ḥadīth al-Dār / Hadeeth ad-Dar: the Journal of Dar al-Athar al-Islamiyyah, 30: 27-32.
-
-برخی کتاب‌ها و مقالات نیز به بررسیِ نقاشی‌هایی اختصاص دارند که به سفارش حاجیان مصری بر دیوار خانه‌های ایشان نقش می‌بسته و قصه‌هایی از سفر ایشان را بازگو می‌کرده است:
-
-Michot, Jean. 1978. Les fresques du pèlerinage au Caire. AARP: Art and Archaeology Research Papers, 13: 7-21.
-
-Michot, Jean. 1978. Pilgrimage frescoes in Cairo. Crossroads (Istanbul), 7: 12-19;40.
-
-Michot, Jean. 1986. De bedevaart naar Mekka en de Ka‘ba volgens de fresco’s op de huizen van de Hâjjîs te Kairo. Tr. Leman, J. Motieven en symbolen in de Algerijnse Turkse en Egyptische volkskunst. Betekenisgeving in de Algerijns-Berberse tapijten en ceramiek, in de motieven op Turkse kousen en in de fresco’s op de huizen van de pelgrims in Egypte. Brussels: Cultuur en Migratie, 69-102.
-
-Parker, Ann, and Avon Neal. 2009. Hajj paintings folk art of the great pilgrimage. Cairo: American University in Cairo Press.
-
-شماری از مقالات به بررسیِ پرده خانه کعبه اختصاص دارند:
-
-Gouda, Abdelaziz. 1994. Die Ṭirāz-Werkstätten der Kiswa für die Ka‘ba in Makka: ein Beitrag zur islamischen Textilgeschichte. Der Islam, 71 ii: 289-301.
-
-Lawrie, William. 2005. The coverings of the two holy mosques. Canvas: Art and Culture from the Middle East and Arab World, 1 v: 110-112; 126-127.
-
-Shalem, Avinoam. 2015. ‘The Body of Architecture: The Early History of the Clothing of the Sacred House of the Kaʿba in Mecca’, in Clothing the Sacred: Medieval Textiles as Fabric, Form, and Metaphor, edited by Mateusz Kapustka and Warren Woodfin. Emsdetten: Edition Imorde, 173–87.
-
-Tezcan, Hülya. 2007. Ka‘ba covers from the Topkapı Palace collection and their inscriptions. Word of God, art of man: the Qur’an and its creative expressions. Selected proceedings from the International Colloquium, London ... 2003. Ed. Fahmida Suleman. Oxford: Oxford University Press, in association with the Institute of Ismaili Studies, (Qur’anic Studies Series, 4), 227-238.
-
-بازسازی‌های کعبه، اشیاء مرتبط با آن، و معرفی کتاب‌هایی که به آن پرداخته‌اند و موضوعاتی از این دست نیز در پژوهش‌های ذیل بررسی شده‌اند:
-
-Esin, Emel. 1983. Episodes of the last restoration of the Ka‘bah (H.1039-40/1629-30). Islam Today / L’Islam Aujourd’hui / Al-Islām al-Yawm, 1: 21-25.
-
-Esin, Emel. 1986. The renovations effected, in the Ka‘bah mosque, by the Ottoman Sultan Selim II (H.974-82 / 1566-74). La vie économique des provinces arabes et leurs sources documentaires à l’époque ottoman (Partie française et anglaise). Tome III. Études reunites et présentées par Abdeljelil Temimi. Zaghouan: Centre d’Études et de Recherches sur les Provinces Arabes à l’Époque Ottomane, 225-232.
-
-Grabar, Oleg. 1985. Upon reading al-Azraqi. Muqarnas, 3: 1-7.
-
-el-Hawary, Hassan Mohammed, and Gaston Wiet. 1985. Materiaux pour un corpus inscriptionum arabicum. Quatrième partie: Arabie. Inscriptions et monuments de la Mecque: Ḥaram et Ka‘ba. Tome I (fascicule 1). Ed. Elisséeff, Nikita. Cairo: Institut Français d’Archéologie Orientale (Memoires, CIX/1).
-
-Milstein, Rachel. 1999. The evolution of a visual motif: the Temple and the Ka‘ba. Israel Oriental Studies, 19: 23-48.
-
-Shafí’, Muḥammad. 1922. A description of the two sanctuaries of Islám by Ibn ‘Abd Rabbihi (d. 940). ‘Ajab’nāmah. A volume of Oriental studies presented to Edward G.Browne on his 60th birthday. Ed. T.W.Arnold and Reynold A.Nicholson. Cambridge: University Press, 416-438.
-
-Sourdel-Thomine, Janine. 1971. Clefs et serrures de la Ka‘ba. Notes d’épigraphie arabe. Revue des Études Islamiques, 39: 29-86.
-
-برای مشخصات تفصیلی‌تر برخی از این مقالات و کتاب‌ها بنگرید به ۳۱ عنوانی که ذیل واژه «کعبه» در بخش نمایه‌های موضوعی کتاب‌شناسی هنر و معماری در جهان اسلام یاد شده است (Sinclair, 2012: 1/ 729 &amp; 2/ 568).
-
-۲. برای نوشته‌های مرتبط در زبان‌های عربی و فارسی بنگرید به:
-
-الرفاعی، عبدالجبار. ۱۳۸۵. معجم ما کتب فی‌ الحج و‌الزیارة و‌المعالم‌ المشرفة فی‌ الحجاز. تهران: نشر مشعر (متن کتاب در اینجا در دسترس است)؛
-
-السنیدی، عبدالعزیز بن راشد. ۱۴۲۳. معجم ما الف عن الحج: تاریخه، مناسكه، تنظیمه، طرقه، الرحلات الیه. ریاض: دارة الملک عبدالعزیز (کتاب را از اینجا می‌توان دریافت کرد).
-
-برای فهرستی از دیگر کتاب‌شناسی‌های این حوزه در زبان‌های عربی و فارسی بنگرید به: نصر ابراهیمی, اباذر. ۱۳۹۲. گزارشی از کتابشناسی های حج و زیارت. آینه پژوهش، ۲۴(۱۴۱)، ۹۳-۹۵.
+  
