--- a/_posts/2019-07-19-xGX3.md
+++ b/_posts/2019-07-19-xGX3.md
@@ -1,13 +1,4 @@
 --- 
-title: "معماری و بینایی" 
-authors: ahmadkhani 
-types: blog 
-slug: xGX3 
+published: false 
 --- 
-به میلۀ حد فاصل رانندۀ اتوبوس تندرو و مسافران تکیه داده بودم و کلافه از شلوغی و گرما، رفت و آمد مسافران را در ایستگاه از شیشۀ جلوی اتوبوس وسط بزرگراه نگاه می‌کردم. یک مرد نابینا با عصایش سعی داشت راه ورود به ایستگاه را پیدا کند. مسئول ایستگاه دست مرد نابینا را که کارت بلیت در آن بود گرفت، زد روی دستگاه بلیت و گفت: «برو جلو آقا، برو جلو». تا همینجا به اندازۀ کافی کنجکاو شده بودم که دنبالش کنم و ببینم چگونه خودش را به اتوبوس می‌رساند. با عصایش نرم‌نرمک جلوی پایش را آزمایش می‌کرد و جلو می‌آمد. خیلی سعی کرده بود اما تنها دو سه گام بلند با مقیاس کسانی که در ایستگاه اتوبوس تند رو عجله دارند و البته می‌بینند جلو آمده بود. مسئول ایستگاه یا کلافه شده بود یا قصد کمک داشت؛ از پشت شیشه مشخص بود فریاد می‌زد که: «برو جلو آقا خیلی جلوتره» ده دوازده  قدم از همان قدم‌های مذکور مانده بود که به در ورودی آقایان برسد. ایستگاه شلوغ بود. آدم ها هم‌جهت او و خلاف جهتش حرکت می‌کردند و با همان مقیاس (مقیاس آدم‌هایی که می‌بینند و عجله هم دارند) او را نمی‌دیدند و به چپ و راست منحرفش می‌کردند. او همان‌طور با مقیاس آدم‌هایی که نمی‌بینند و البته عجله هم نمی‌توانند داشته باشند جلو می‌آمد که عصایش ستون قطور فلزی ایستگاه را رد کرد و سرش محکم کوبیده شد به آن. ناخودآگاه گفتم: «آآخ...». نمی‌دانم صدایی از او درآمد یا نه ولی فرقی هم نمی‌کرد؛ در آن شلوغی صدایی در مقیاس او شنیده نمی‌شد. نمی‌دانم چه حسی داشت اما فکر کردم خودم اگر جای او بودم حتما از همۀ آدم‌هایی که نمی‌دیدمشان منزجر می‌شدم و تخیل می‌کردم که با همۀ نابینایان جمع شویم، انقلاب کنیم، معادلات قدرت را به هر نحوی که شده تغییر بدهیم؛ قدرت را از آن خود کنیم و همۀ ساختمان‌ها و شهرها را همانطوری که خودمان لازم داریم بسازیم تا همۀ بینایان هم مجبور شوند در همان وضعیت زندگی کنند. چقدر زندگی این بینایان در آن شهرها و ساختمان‌ها خنده‌دار می‌شد؛ چقدر سرخورده می‌شدند که حس بینایی‌شان هیچ به کارشان نمی‌آمد؛ از تصور آن انقلاب لبخندی به لبم آمد و دیدم انتقام گاهی چه طعم خوشی دارد. البته که همه مثل من اینقدر انتقام‌جو نیستند. فکر کردم باید متن رمانتیکی بنویسم و عنوانش را بگذارم «کاش همۀ مان کور شویم!»
-
-خودِ انتقام‌جو و خودِ رمانتیکم را نشاندم سرجایشان و از آن خودم که مدرک دانشگاهیِ معماری داشت سؤال کردم «اگر بینایی را از معماری و شهرهایمان بگیریم برایش چه باقی خواهد ماند؟». خودم پاسخ دادم که انگار «اساس بینایی بر معماری است. هم آنکه طراحی می‌کند و پیش از آن تصور؛ هم آنکه آن را می‌سازد بیش و پیش از هر چیز به چشم‌های خود نیاز دارد و طبیعتاً مانند هر موضوع دیگری پیرامون ما، ساختمان‌ها و شهرها هم برای درک شدن و مورد استفاده قرار گرفتن بر حس بینایی متکی‌اند». اما راضی نشدم و خود شهودی‌ام  گفت حتماً در جایی از این جواب نکتۀ ظالمانه‌ای وجود دارد که پذیرفتنش برایم اینقدر سخت است و سؤال را  برایم به گونۀ دیگری مطرح کرد: «اگر تعریف ظرف زندگی را برای معماری بپذیریم؛ که به نسبت، تعریف جامعی هم هست، آیا نابینایان اینقدر کمتر از ما زندگی می‌کنند که سهمشان از درک معماری و شهرشان اینهمه کمتر از بینایان باشد؟» سؤال را برای تمام اقلیت‌ها در نوع و میزان توانایی‌های فیزیکی تعمیم دادم: ناشنوایان، کم‌توانان و حتی در مراتب بعدی کودکان و سالمندان که همه مجبورند به ساختمان‌ها و شهرهایی که به معیار و مقیاس انسان‌های بزرگسال ساخته شده‌اند تن بدهند. آن هم با پیش‌فرض انسان بزرگسالی با توان کامل در همۀ زمینه‌ها. سعی کردم چشمانم را ببندم و تصور کنم بدون دیدن چگونه می‌توانم به آن ایستگاه برسم. با چشم‌های بسته حتی بدون تلاش برای رسیدن به ایستگاه وقتی وسط بزرگراه ایستاده بودم و صدای رد شدن ماشین‌ها را از دو طرفم می‌شنیدم حس نا‌امنی غیر قابل تحملی داشتم. فهمیدم من اصلا توانایی تصور درک یک نابینا را از محیط پیرامونش ندارم و احتمالا جز چند لحظه تاریکی حس مشترکی با او نمی‌توانم داشته باشم. چند لحظه تاریکی که مطمئنم بعدش می‌توانم چشمانم را باز کنم، همه جا را ببینم و راه خودم را پیدا بکنم. چند لحظه تاریکی که مطمئنم هر وقت خودم بخواهم پایان می‌گیرد پس همان چند لحظه تاریکی هم هیچ تشابهی به حس و حال او ندارد.
-
-خودِ خودسرزنشگرم که برای لحظاتی کوتاه در حد نوشتن همین متن ساکت شده بود گفت: اصلاً اگر خودت باشی چه می‌کنی؟ چه کار می‌توانی بکنی که طرح معماری‌ای یک گام کوچک مهربانانه به سمت اقلیت‌ها در توانایی‌های فیزیکی بردارد؟  خودِ خود سرزنشگرم را هم نشاندم سرجایش و به او گفتم: در چهار پنج سالِ دوران کارشناسی تنها چیزی که به ما دانشجوها یادآوری شد این بود که: «کنار پله‌ها برای ورود ویلچر سطح‌شیب‌دار بگذارید!» او خب اما مسلماً سرجایش نمی‌ماند. بلند شد ایستاد، سینه‌ سپر کرد و گفت: پس تو هم منتظری که بقیه در این باره کاری بکنند یا چیزی یادت بدهند. از آنجا که گفت و گو با این خود پایانی نداشت عاجزانه خواهش کردم تا پایان متن که چیزی به آن نمانده سکوت کند.
-
-وقتی دیدم درک من چقدر از یک نابینا یا شخصی با توانایی‌های فیزیکی محدودتر فاصله دارد به این فکر کردم که شاید اصلاً باید معماران و شهرسازانی با میزان توانایی‌های فیزیکی متفاوتی وجود داشته باشند. توانایی‌های فیزیکی متفاوت برای شکل گرفتن الفبا و فرهنگ معماری و شهرسازی‌ای که همه در آن شریک باشند. فکر کردم چرا معمارانی که خود در این مسأله جزو اکثریت جامعه هستند نمی‌توانند در طول تحصیل و در طول کار با آن اقلیت‌ها در تعامل باشند، تعامل در روند یادگیری معماری و روند طراحی و اجرای معماری. یا اصلا مگر چند درصد دانش‌آموختگان معماری ما با توانایی‌های کامل فیزیکی طراحانی بی‌عیب و نقص می‌شوند که حالا نگران آن باشیم که ممکن است معماران با توانایی‌های فیزیکی محدودتر کارآمد نباشند. اگر امکان این حضور فراهم بود شاید فرصتی به معماری و شهر داده می‌شد تا امکانات جدید خود را بیازماید و کشف کند.
+  
