--- a/_posts/2021-03-31-Uxq6.md
+++ b/_posts/2021-03-31-Uxq6.md
@@ -1,47 +1,4 @@
 --- 
-title: "کتاب تازه: «معماری دیجیتال فراتر از رایانه‌ها: پاره‌هایی از تاریخ فرهنگیِ طراحی رایانشی»" 
-authors: asmaneh 
-types: "bap" 
-categories: "book" 
-featureImg: "/assets/img/posts/Uxq6.jpg" 
-slug: "Uxq6" 
-gallery: 
-- image_path: "/assets/img/posts/Uxq6.jpg" 
-  title: "کتاب تازه: «معماری دیجیتال فراتر از رایانه‌ها: پاره‌هایی از تاریخ فرهنگیِ طراحی رایانشی»" 
- 
+published: false 
 --- 
-`Digital Architecture Beyond Computers: Fragments of a Cultural History of Computational Design`
-
-`By: Roberto Bottazzi`
-
-`Bloomsbury, 2021`
-
-در این کتاب، تاریخ عمیق معماری دیجیتال بررسی می‌شود و مفاهیم طراحی تا دوران رنسانس پیگیری شده و پیوند این مفاهیم با جدیدترین نرم‌افزارهای کاربردیِ طراحان عرضه می‌شود. در این کتاب، گزارشی انتقادی از چگونگی ظهور ابزارها و فنون طراحی دیجیتال مطرح شده و طراحان را قادر می‌سازد تا درکشان را از ابزارهای دیجیتالی که هر روز به کار می‌گیرند عمیق‌تر کنند.
-چه مفاهیم زیبایی‌شناختی، فضایی، و فلسفی با ابزارهای دیجیتالی که معماران به کار می‌برند همراه است؟ تاریخ آن چیست؟ و این ابزارها سبب پدید آمدن چه نوع فنون و طرح‌هایی است؟ در این کتاب، پاسخ‌ها به چنین سوالاتی پیگیری می‌شود و مشخص می‌شود چگونه معماری دیجیتال ایده‌ها و مسیرهای پیچیدۀ حوزه‌های گوناگون و تکامل‌یافته در قرون متعدد را گرد هم می‌آورد. هدف این کتاب باز کردن این ایده‌ها و پیگیریِ ریشه‌های آن و نفوذشان به معماری و بازشناسی کاربردشان در نرم‌افزارهای معاصر است.
-فصل‌های کتاب حول نه «پارۀ» تاریخ موضوع سازماندهی شده؛ هر پاره حاوی مفهومی بنیادی در نرم‌افزارهای مرسوم طراحی به کمک رایانه است: پایگاه داده، لایه‌ها و حوزه‌ها، پارامتریک، پیکسل، برنامه، تصادفی، پویش، توپولوژی، و وکسل/مکسل، که هر مضمون از طریق نمونه‌های موردی تاریخی و معاصر بررسی شده است. در نتیجه این کتاب فرآیند طراحی دیجیتال را به تاریخ و تئوری معماری می‌پیوندد و معماران و نظریان پردازان را قادر می‌سازد تا ابزارهای تحلیلی‌تر و اساسی‌تر پدید آورند تا به کمک آن طراحی دیجیتال و نرم‌افزارهای آن مفهوم سازی شود.
-
-
--  فهرست مطالب کتاب:
-
-
-`Introduction: Designing with Computers`
-
-`1. Database`
-
-`2. Morphing and Contouring`
-
-`3. Networks`
-
-`4. Parametrics`
-
-`5. Pixel`
-
-`6. Random`
-
-`7. Scanning`
-
-`8. Voxels and Maxels`
-
-
-- اطلاعات بیشتر دربارۀ این کتاب: [لینک](https://www.bloomsbury.com/uk/digital-architecture-beyond-computers-9781474258128/)
-
+  
